# serde_closure

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  azure-pipelines.yml
.circleci/: config.yml
serde_closure_derive/: Cargo.toml
serde_closure_derive/src/: lib.rs
src/: lib.rs  relative_ptr.rs
tests/: smoke.rs  stable.rs  test.rs
