[workspace]

[package]
name = "serde_closure"
version = "0.3.0"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["development-tools","encoding","rust-patterns","network-programming"]
keywords = ["closure","serialization","serde","distributed"]
description = """
Serializable and debuggable closures.

This library provides macros that wrap closures to make them serializable and debuggable.
"""
repository = "https://github.com/alecmocatta/serde_closure"
homepage = "https://github.com/alecmocatta/serde_closure"
documentation = "https://docs.rs/serde_closure"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/serde_closure", pipeline = "tests", build = "10" }
maintenance = { status = "actively-developed" }

[dependencies]
serde_closure_derive = { version = "=0.3.0", path = "serde_closure_derive" }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
rustversion = "1.0"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"
